@@ -14,6 +14,7 @@ changes made.  See document footer for additional details.
 --- 2009-06-XX  Release 7.14.10                                    ---
 ----------------------------------------------------------------------
 
+* no more rtweight crashing when PWD or HOME are unset - Sean Morrison
 * fixed "Invalid NMG" empty output bug in g-stl - Sean Morrison
 * fixed Mac OS X 10.5 OGL and X11 display manager crash affecting mged
 	- Sean Morrison, Mike Tegtmeyer, Tim Myers
